syntax = "proto3";

package pb;
import "buy_order.proto";

option go_package = "peerbill-trader-api/pb";

message CreateBuyOrderRequest {
    string wallet_address = 1;
    string crypto = 2;
    string fiat = 3;
    float fiat_amount = 4;
    float crypto_amount = 5;
    string username = 6;
    float rate = 7;
}

message CreateBuyOrderResponse {
    BuyOrder buyOrder = 1;
}