syntax = "proto3";

package pb;
import "order.proto";

option go_package = "github.com/ebukacodes21/peerbill-trader-api/pb";

message CreateOrderRequest {
    string escrow_address = 1;
    string crypto = 2;
    string fiat = 3;
    float fiat_amount = 4;
    float crypto_amount = 5;
    string username = 6;
    float rate = 7;
    string user_address = 8;
    string order_type = 9;
    optional string bank_name = 10;
    optional string account_number = 11;
    optional string account_holder = 12;
}

message CreateOrderResponse {
    Order order = 1;
}